k8s/covid-fastapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: covid-fastapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: covid-fastapi
  template:
    metadata:
      labels:
        app: covid-fastapi
    spec:
      containers:
        - name: covid-fastapi
          # image: covid-fastapi
          image: moonzkim/ai-service-fastapi:0.2.0
          imagePullPolicy: Always
          ports:
          - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: covid-fastapi
spec:
  type: ClusterIP
  selector:
    app: covid-fastapi
  ports:
  - port: 8000
